# magic_map

./: Cargo.toml  README.md
.github/workflows/: ci.yml
magic_map/: Cargo.toml
magic_map/src/: lib.rs
magic_map/tests/: magic_map.rs  readme.rs
magic_map_macros/: Cargo.toml
magic_map_macros/src/: lib.rs  magic_map.rs
