[package]
name = "magic_map_macros"
description = "Procedural macros for the magic_map crate — depend on `magic_map` instead of using this directly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
